# physioflow

./: .claude-memory  .gitignore  CITATION.cff  README.es.md  README.md  README.pt.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: launch.json
.github/workflows/: build-manual.yml  ci.yml
.streamlit/: config.toml  secrets.toml.example
Paper/: physioflow-softwarex.tex  physioflow-softwarex_final.tex  refs.bib
assets/: logo_CEAGRE.avif
data/sample/: 0_Dados_Fisiologia_RIO VERDE.xlsx  PRESSURE.txt  RATPUP.txt  Rio_Verde_Geral_24-03-26.xlsx  SALMON.txt
data/sample/test/: BESAG_ELBATAN.txt  SPRING_BARLEY.txt  exemplo_faixas.csv  exemplo_nested.csv  sk_crd1.csv  sk_rcbd.csv  sk_sorghum.csv
docs/: architecture.md  contributing.md  data_dictionary.md  deployment.md  i18n.md  manual.en.md  manual.es.md  manual.pt.md  manual_metadata.yaml  project_status.md  validacao_externa.md  validacao_simulada_usuario.md
docs/img/manual/: README.md
scripts/: build_manual_pdf.sh  i18n_audit.py
src/: auth.py  pipeline.py  profile.py  schema.py  state.py  stats_utils.py
src/components/: __init__.py  charts.py  dataset_controls.py  filters.py  sidebar.py
src/config/: __init__.py  settings.py
src/i18n/: __init__.py  translations.py
src/i18n/locales/: en.json  es.json  pt.json
src/ml/: __init__.py  model_registry.py
src/pages/: __init__.py  comparative.py  eda.py  experimental_design.py  modeling.py  pipeline.py  regression.py  spatial.py  timeseries.py  upload.py
tests/: test_i18n.py  test_ml_classification.py  test_modeling_apptest.py  test_page_robustness.py  test_pipeline.py  test_sample_datasets.py  test_schema.py  test_stats_utils.py
