[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chamberflux"
version = "1.0.0"
description = "Open-source interactive analysis platform for soil GHG flux analysis from LI-COR LI-7810SC and LI-7820 trace gas analyzers"
authors = [
    {name = "Leandro Rodrigues da Silva Souza", email = "leandrorodrigues.s@gmail.com"},
]
license = {text = "GPL-2.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/pages/*",
    "src/components/*",
    "src/i18n/translations.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = false
files = ["src/schema.py", "src/pipeline.py", "src/state.py", "src/ml/model_registry.py"]
