[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physioflow"
version = "1.0.0"
description = "Open-source interactive platform for crop ecophysiology data analysis (photosynthesis, transpiration, chlorophyll, LAI) with schema validation, statistical guard-rails, replicate handling and geospatial modules"
authors = [
    {name = "Daniel Hilário da Silva", email = "daniel.hilario@ifgoiano.edu.br"},
    {name = "Leandro Rodrigues da Silva Souza", email = "leandrorodrigues.s@gmail.com"},
    {name = "André Abade", email = "andre.abade@ifmt.edu.br"},
    {name = "Francisco de Almeida Lobo", email = "francisco.lobo@ufmt.br"},
    {name = "Fernando Rodrigues Cabral Filho", email = "fernandorcfilho10@gmail.com"},
    {name = "Erli Pinto dos Santos", email = "erli@ufrrj.br"},
    {name = "Adinan Alves da Silva", email = "adinan.alves@ifgoiano.edu.br"},
    {name = "Daiane Alves da Silva", email = "professoradaiane015@gmail.com"},
    {name = "Alan Carlos da Costa", email = "alan.costa@ifgoiano.edu.br"},
    {name = "Ketlyn Santos Sousa", email = "ketlyn.s.sousa@gmail.com"},
    {name = "Igor Eli da Silva", email = "igorelizoo@gmail.com"},
]
license = {text = "GPL-2.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "ecophysiology",
    "crop physiology",
    "streamlit",
    "soybean",
    "sugarcane",
    "IRGA",
    "chlorophyll",
    "kriging",
    "spatial statistics",
    "Moran's I",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/pages/*",
    "src/components/*",
    "src/i18n/translations.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = false
files = ["src/schema.py", "src/pipeline.py", "src/state.py", "src/ml/model_registry.py"]
